# data-simulator

./: .gitignore  README.md  csv_gen.py  data_sim.py  datasim.py  datasimlib.py  generate.py  generate_alternate.py  pyproject.toml  requirements.txt
data/: Calib02_22-03-2023.caldat  newcsvfile.csv
src/datasim/: __main__.py  datasim.py
src/datasim/data/: Calib02_22-03-2023.cal
src/datasim/data2d/: tracefile.csv
